2008-03-30  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: fix compiler warning.

=== gtksourceview 2.2.0 ===

2008-02-25  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.2.0

2008-02-29  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/c.lang: (printf): highlight
	width and precision given as '*';
	(escaped-character): highlight \b; hex digit is \\x[HEX]+,
	not \\x[HEX]{0,2};
	(string), (char): highlight 'L' prefix in wide char literals.
	* gtksourceview/language-specs/yacc.lang: prettified.
	* gtksourceview/language-specs/lua.lang: do not highlight
	_G.* in the middle of idenitifiers.

2008-02-28  Johannes Schmid <jhs@gnome.org>

	* gtksourceview/gtksourceview.c: (gtk_source_view_paint_margin):
	Fixed a small memory leak

=== gtksourceview 2.1.3 ===

2008-02-25  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.1.3

2008-02-25  Johannes Schmid <jhs@gnome.org>

	* gtksourceview/gtksourcemark.c: (gtk_source_mark_finalize):
	Initialize object correctly (will crash otherwise)

2008-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcemark.c: do not leak the category string.
	Spotted by Johannes Schmid.

2008-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/oblivion.xml: fix typo in
	the "def:shebang" style. Spotted by Chris Hollenbeck.

2008-02-06  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/gtksourcebuffer.c:
	* gtksourceview/gtksourcebuffer.h:
	(gtk_source_buffer_remove_source_marks): Make the GtkTextIter*
	parameters const, as they are when used in this way elsewhere in this
	API. Bug #514655.

2008-02-04  Tor Lillqvist  <tml@novell.com>

	* gtksourceview-zip.in: Look for catalogs in share/locale first,
	as that is where they will be with a properly built GNU gettext.

=== gtksourceview 2.1.2 ===

2008-01-29  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README: